[package]
name = "msg-store-plugin-leveldb"
description = "A leveldb backend plugin for the msg-store"
version = "0.1.1"
edition = "2018"
license = "MIT"
repository = "https://github.com/msg-store/msg-store-plugin-leveldb"
authors = ["Joshua Enokson <kilograhm@pm.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3" }
db-key = { version = "0.0.5" }
leveldb = { version = "0.8.6" }
msg-store = "0.1.0"
serde = { version = "1.0", features = ["derive"] }