[package]
name = "msg-store-plugin-leveldb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3" }
db-key = { version = "0.0.5" }
leveldb = { version = "0.8.6" }
msg-store-db-plugin = { git = "https://github.com/msg-store/msg-store-db-plugin/", rev = "0f7187474fe9b3828640cc83f1bd85a2f91a2c2c" }
msg-store = { git = "https://github.com/msg-store/msg-store/", rev = "55e4a422aca650b172a45aa961ef901576bb8e84" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "general"
harness = false