[package]
name = "msg-store-plugin-leveldb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3" }
db-key = { version = "0.0.5" }
leveldb = { version = "0.8.6" }
msg-store-db-plugin = { git = "https://github.com/msg-store/msg-store-db-plugin/", rev = "77c9c952856a8c5e00d06d3b530c82fc1152ea9f" }
msg-store = { git = "https://github.com/msg-store/msg-store/", rev = "8b99422811caa553f5ebc70fd1c645dac79aff4a" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "general"
harness = false